test/libsolidity/syntaxTests/literalSuffixes/application/invalid_suffix_with_call_parentheses.sol
function suffix(uint value) pure suffix returns (uint) { return value; }

contract C {
    uint x = 1000 suffix();
}
// ----
// TypeError 5704: (100-113): Type is not callable
